--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "deploy:indexes": "firebase deploy --only firestore:indexes"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "@tailwindcss/postcss": "^4.1.18",
     "autoprefixer": "^10.4.23",
     "firebase": "^12.7.0",
